--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
         </svg>
       </button>
     </form>
+    <script type="module" src="./js/picturesSearch.js"></script>
   </body>
 </html>
