link for SimpleLightbox added

--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,16 @@
     </div>
     <button type="button" class="load-more">Load more</button>
     <footer class="footer">
-      <p class="footer-text">
-        Pictures are loaded from
-        <svg class="footer-icon" width="120" height="18">
+      <p class="footer-text">Pictures are loaded from</p>
+      <a
+        class="footer-link"
+        href="https://pixabay.com/"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><svg class="footer-icon" width="120" height="18">
           <use href="./images/sprite.svg#pixabay"></use>
         </svg>
-      </p>
+      </a>
     </footer>
     <script type="module" src="./js/picturesSearch.js"></script>
   </body>
