--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,12 @@
         </button>
       </form>
     </header>
-    <div class="gallery">
-      <!-- Карточки изображений -->
+    <div class="container">
+      <div class="gallery">
+        <!-- Карточки изображений -->
+      </div>
     </div>
+
     <button type="button" class="load-more">Load more</button>
     <footer class="footer">
       <p class="footer-text">Pictures are loaded from</p>
