scroll-to-top button created

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
         </svg>
       </a>
     </footer>
+    <div className="scroll-to-top">
+    <span class="btn btn-position btn-style">^</i>
+</div>
     <script type="module" src="./js/picturesSearch.js"></script>
+    <script type="module" src="./js/scrollToTop.js"></script>
   </body>
 </html>
